--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -12,7 +12,7 @@ jobs:
         with:
           node-version: '14'
       - run: yarn install
-      - run: yarn test
+      - run: npm run workflow
 
       - name: Tests ✅
         if: ${{ success() }}
