--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "test:e2e": "playwright test",
-      "test": "jest --watch",
-    "workflow": "jest --forceExit --detectOpenHandles",
+    "test": "jest --watch",
+    "workflow": "jest --forceExit --detectOpenHandles"
   },
   "dependencies": {
     "next": "12.2.2",
