--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "workflow": "jest --forceExit --detectOpenHandles"
   },
   "dependencies": {
+    "@headlessui/react": "^1.6.6",
     "next": "12.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0"
@@ -20,6 +21,7 @@
     "@playwright/test": "^1.23.2",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
+    "@testing-library/user-event": "^14.2.1",
     "@types/node": "18.0.3",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
