setup test for the navbar

--- a/package.json
+++ b/package.json
@@ -9,10 +9,19 @@
     "lint": "next lint",
     "test:e2e": "playwright test",
     "test": "jest --watch",
-    "workflow": "jest --forceExit --detectOpenHandles"
+    "workflow": "jest --forceExit --detectOpenHandles",
+    "prettier:check": "prettier --config .prettierrc --check \"src/**/*.{ts,css,html}\""
   },
+  "husky": {   
+    "hooks": {  
+       "pre-commit": "lint-staged",
+       "pre-push": "npm run test"            
+     }   
+  },
+  "lint-staged": {"src/**/*.{ts,css,html}": ["npm run prettier:check"]},
   "dependencies": {
     "@headlessui/react": "^1.6.6",
+    "@heroicons/react": "^1.0.6",
     "next": "12.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0"
